# lib_l2_cache

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.rst
lib_l2_cache/: l2_cache.cmake  lib_l2_cache.cmake
lib_l2_cache/api/: l2_cache.h  l2_cache_config_checks.h  l2_cache_debug.h  l2_cache_default_config.h
lib_l2_cache/src/: l2_cache_direct_map.S  l2_cache_direct_map.c  l2_cache_misc.S  l2_cache_two_way.S  l2_cache_two_way.c
tests/direct_map/: CMakeLists.txt
tests/direct_map/src/: flash_impl.c  l2_cache_config.h  main.c
tests/two_way/: CMakeLists.txt
tests/two_way/src/: app_common.h  flash_handler.h  l2_cache_config.h  main.c  swmem_macros.h
